--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,6 +349,8 @@ hr {
   height: 1px;
   background-color: #EB773E;
   color: #EB773E;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .selection-btn {
@@ -784,75 +786,75 @@ article {
 @media(max-width: 1380px) {
  /* container */
  .container {
-  padding: 0 40px;
-  max-width: 900px;
-  margin-left: 29%;
+    padding: 0 40px;
+    max-width: 900px;
+    margin-left: 29%;
  }
 
  .container-header {
-  padding: 0 30px;
+    padding: 0 30px;
  }
 
  /* header */
  .header {
-  width: 29%;
+    width: 29%;
  }
 
  .square-nav {
-  width: 25px;
-  height: 25px;
-  left: -33px;
+    width: 25px;
+    height: 25px;
+    left: -33px;
  }
 
  .logo {
-  width: 50px;
-  height: 50px;
+    width: 50px;
+    height: 50px;
  }
 
  .nav-link {
-  margin: 15px 0;
-  font-size: 13px;
+    margin: 15px 0;
+    font-size: 13px;
  }
 
  .header-tel {
-  font-size: 18px;
+    font-size: 18px;
  }
 
  .header-address-info {
-  font-size: 13px;
+    font-size: 13px;
  }
 
  /* Intro */
  .intro-title {
-  font-size: 40px;
-  line-height: 50px;
-  padding-left: 25px;
-  left: 0px;
-  margin-bottom: 55px;
+    font-size: 40px;
+    line-height: 50px;
+    padding-left: 25px;
+    left: 0px;
+    margin-bottom: 55px;
  }
 
  .intro-descriptor {
-  font-size: 14px;
-  line-height: 21px;
-  left: 25px;
+    font-size: 14px;
+    line-height: 21px;
+    left: 25px;
  }
 
  .intro-info {
-  height: calc(100vh - 72px);
+    height: calc(100vh - 72px);
  }
 
  /* btn */
  .btn {
-  width: 300px;
-  height: 55px;
-  padding-top: 16px;
-  left: 30px;
-  font-size: 16px;
+    width: 300px;
+    height: 55px;
+    padding-top: 16px;
+    left: 30px;
+    font-size: 16px;
  }
 
  /* section */
  .section {
-  padding: 25px 0;
+    padding: 25px 0;
  }
 
  /* selection */
@@ -860,38 +862,38 @@ article {
  .benefits-title, 
  .flats-title, 
  .reviews-title {
-  font-size: 28px;
-  padding-left: 25px;
-  margin-bottom: 25px;
+    font-size: 28px;
+    padding-left: 25px;
+    margin-bottom: 25px;
  }
 
  .selection-info {
-  margin-top: 5px;
+    margin-top: 5px;
  }
 
  .selection-img {
-  width: 180px;
-  height: 180px;
-  margin-left: 25px;
-  margin-right: 25px;
+    width: 180px;
+    height: 180px;
+    margin-left: 25px;
+    margin-right: 25px;
  }
 
  .selection-info-text p {
-  font-size: 16px;
-  line-height: 21px;
-  width: 378px;
-  margin-left: 5px;
-  margin-bottom: 10px;
+    font-size: 16px;
+    line-height: 21px;
+    width: 378px;
+    margin-left: 5px;
+    margin-bottom: 10px;
  }
 
  .selection-list {
-  margin-left: 5px;
-  margin-top: 5px;
+    margin-left: 5px;
+    margin-top: 5px;
  }
 
  .selection-point {
-  font-size: 15px;
-  line-height: 33px;
+    font-size: 15px;
+    line-height: 33px;
   }
 
   .selection-info-doing p {
@@ -1123,6 +1125,342 @@ article {
   .footer-info-text {
     font-size: 12px;
     line-height: 20px;
+  }
+}
+
+@media(max-width: 1025px) {
+  /* header */
+  .header {
+    width: 28%;
+  }
+
+  .container-header {
+    padding: 0 15px;
+  }
+
+  .header-inner {
+    left: 10px;
+  }
+
+  .logo {
+    width: 45px;
+    height: 45px;
+  }
+
+  .square-nav {
+    width: 20px;
+    height: 20px;
+    left: -30px;
+  }
+
+  .nav-link {
+    margin: 10px 0;
+    font-size: 11px;
+    line-height: 22px;
+    padding-left: 0;
+  }
+
+  .header-address {
+    margin-bottom: 35px;
+  }
+
+  .header-tel {
+    font-size: 17px;
+  }
+
+  .header-address-info {
+    font-size: 12px;
+  }
+
+  /* container */
+  .container {
+    padding: 0 15px;
+    max-width: 553px;
+    margin-left: 28%;
+  }
+
+  /* Intro */
+  .intro-descriptor {
+    font-size: 13px;
+    line-height: 19px;
+    left: 15px;
+    margin-top: 10px;
+  }
+
+  .intro-title {
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 45px;
+    padding-left: 15px;
+  }
+
+  .intro-info {
+    width: 450px;
+  }
+
+  /* BTN */
+  .btn {
+    width: 215px;
+    height: 45px;
+    padding-top: 11px;
+    font-size: 12px;
+    left: 20px;
+  }
+
+  /* Titles */
+  .selection-title, 
+  .benefits-title, 
+  .flats-title, 
+  .reviews-title {
+    font-size: 22px;
+    line-height: 28px;
+    margin-bottom: 15px;
+    padding-left: 15px;
+  }
+
+  /* selections */
+  .selection-img {
+    width: 140px;
+    height: 140px;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .selection-info-text p {
+    font-size: 12px;
+    line-height: 19px;
+    width: 330px;
+    margin-left: 5px;
+  }
+
+  .selection-point {
+    font-size: 12px;
+    line-height: 19px;
+  }
+
+  .selection-info-doing {
+    margin-left: 15px;
+    margin-top: 15px;
+  }
+
+  .selection-info-doing-poins {
+    width: 505px;
+  }
+
+  .selection-info-doing p {
+    margin-bottom: 15px;
+  }
+
+  .selection-info-doing-poins p {
+    font-size: 11px;
+    line-height: 17px;
+    padding: 5px;
+    margin-bottom: 15px;
+  }
+
+  hr {
+    margin-top: 31px;
+    width: 7px;
+  }
+
+  .selection-btn {
+    margin-top: 10px;
+  }
+
+  .selection-btn .btn {
+    left: 15px;
+    width: 230px;
+    top: 0;
+  }
+
+  .selection-btn-info {
+    margin-left: 50px;
+    padding-left: 15px;
+  }
+
+  .selection-btn-info {
+    font-size: 11px;
+    line-height: 14px;
+  }
+
+  /* benefits */
+  .benefits-table {
+    margin-left: 15px;
+  }
+
+  .benefits-text {
+    font-size: 15px;
+  }
+
+  .benefits-list {
+    margin-top: 5px;
+    justify-content: space-between;
+  }
+
+  .benefits-list-item {
+    margin: 15px 0 10px;
+  }
+
+  .benefits-list-icon {
+    width: 30px;
+    height: 30px;
+  }
+
+  .benefits-list-title {
+    width: 147px;
+    font-size: 12px;
+    line-height: 17px;
+  }
+
+  .benefits-list-text {
+    font-size: 10px;
+    line-height: 16px;
+  }
+
+  /* flats */
+  .flats-text {
+    font-size: 15px;
+    margin-left: 15px;
+  }
+
+  .flats-list {
+    margin-left: 15px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+
+  .flats-list-col {
+    margin-right: 70px;
+  }
+
+  .flats-list-item {
+    font-size: 13px;
+    line-height: 27px;
+  }
+
+  /* rev */
+  .reviews-slider {
+    margin-top: 25px;
+    margin-left: 15px;
+  }
+
+  .reviews-slide-item {
+    max-width: 505px;
+  }
+
+  .ava {
+    width: 60px;
+    height: 60px;
+  }
+
+  .name-star {
+    margin-left: 15px;
+  }
+
+  .name-star h4 {
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  .rev {
+    width: 245px;
+    height: 310px;
+  }
+
+  .rev-square {
+    left: 107px;
+  }
+
+  time {
+    top: 20px;
+    right: 15px;
+  }
+
+  .stars img {
+    width: 20px;
+    height: 20px;
+  }
+
+  article {
+    margin-top: 20px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .rev-link {
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .rev-footer {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .reviews-controls {
+    margin-left: 15px;
+    margin-top: 30px;
+    max-width: 505px;
+  }
+
+  /* contacts */
+  .contacts-info {
+    margin-left: 15px;
+    max-width: 505px;
+  }
+
+  .contacts-title {
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+
+  .contacts-text {
+    font-size: 15px;
+    line-height: 19px;
+    margin-bottom: 5px;
+  }
+
+  .contacts-address img {
+    margin-right: 15px;
+  }
+
+  .contacts-img {
+    width: 235px;
+  }
+
+  .contacts-address {
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  .contacts-icons a {
+    width: 40px;
+    height: 40px;
+  }
+
+  .contacts-icon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .contacts-icons {
+    width: 195px;
+    margin-bottom: 20px;
+  }
+
+  /* footer */
+  .footer-inner-info {
+    max-width: 505px;
+    margin-left: 15px;
+  }
+
+  .footer-copy {
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .footer-info-text {
+    font-size: 11px;
   }
 
 }
